[tool.poetry]
name = "contamprob"
version = "0.0.0"                                                # Just a placeholder
description = "Probability of signal contamination in LISA data"
authors = ["Sen-wen Deng <deng@apc.in2p3.fr>"]
readme = "README.md"
packages = [{ include = "contamprob", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
juliacall = "^0.9"
numpy = ">1.25"
scipy = "^1.14"
joblib = "^1.4"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ipykernel = "^6.29.5"
ruff = "^0.9.6"
matplotlib = "^3.9.0"
line_profiler = "^4.1.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"
