[project]
name = "contamprob"
dynamic = ["version"]
description = "Probability of signal contamination in LISA data"
authors = [
    { name = "Senwen Deng", email = "senwen.deng@l2it.in2p3.fr" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
	"juliacall",
	"numpy",
	"scipy",
	"joblib",
]


[dependency-groups]
dev = [
	"mypy",
	"ipykernel",
	"ruff",
	"matplotlib",
	"line_profiler",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.build.targets.wheel]
packages = ["src/contamprob"]

[tool.uv-dynamic-versioning]
enable = true
style = "semver"
vcs = "git"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
